<resources>
    <string name="app_name">Todo</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_todo_account">Create your Todo Account</string>
    <string name="new_username">New Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="backarrow">backarrow</string>
    <string name="title_activity_home_slate">HomeSlate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>