<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signup">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="61dp"
        android:fontFamily="@font/nunito_light"
        android:gravity="start"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backarrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="@font/nunito"
        android:text="@string/create_your_todo_account"
        android:textColor="#9B9B9B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="42dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_textfield"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="5dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_textfield"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="6dp"
        android:fontFamily="@font/nunito"
        android:hint="Re-Type Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/new_username"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:autofillHints="password"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_textfield"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="6dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/re_type_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_textfield"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="6dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/new_password"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24sp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_textfield_redpink"
        android:fontFamily="@font/nunito_light"
        android:gravity="center"
        android:text="@string/sign_up_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_type_new_password" />

    <ImageView
        android:id="@+id/backarrow"
        android:contentDescription="@string/backarrow"
        android:layout_width="58sp"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:onClick="goLogin"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>